--- a/awards.css
+++ b/awards.css
@@ -1,10 +1,9 @@
+body{
+    overflow-x: hidden;
+}
 .awards{
     padding: 25px;
     border: 1px #CAE09F;
-}
-
-.award-img{
-    
 }
 .award-img>img{
     height: 400px;
@@ -34,3 +33,31 @@
     margin-left: 30px;
     margin-top: 15px;
 }
+footer{
+    background-color: #CAE09F;
+    }
+    .social-media>a{
+        text-decoration: none;
+        color:black;
+    }
+    .contact>a{
+        color:black;
+        text-decoration: none;
+    }
+    .additional>a{
+        text-decoration: none;
+        color: black;
+        font-weight: 900;
+    }
+    .bottom{
+        height:50px;
+        background-color:#CAE09F;
+    }
+    .bottom>p{
+        position:relative;
+        top:10px;
+    }
+    .awards{
+        position:relative;
+        left:80px;
+    }
