--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
 *{
-    font-family: "Playpen Sans", cursive;
+    font-family:"Roboto";
     
 }
-
-
-
 .nav{
     background-color:#CAE09F;
     font-size: x-large;
@@ -13,6 +10,8 @@
     font-style: normal;
     display: flex;
     position: sticky;
+    top:0px;
+    z-index:100;
     margin-left: -20px;
     margin-top: -10px;
 } 
@@ -23,7 +22,7 @@
     color: black;
     margin-top: 35px;
     padding: 15px;
-    margin-left: 30px;
+    margin-left: 60px;
 }
 .logo-img{
     padding-right: 40px;
@@ -38,10 +37,11 @@
 }
 
 .banner{
-    
     background-image: url('./images/banner1\ .jpg');
-
-    height: 400px;
+    position:relative;
+    left:90px;
+    top:150px;
+    height: 600px;
     width: 1300px;
 }
 
@@ -55,7 +55,6 @@
     100%{background-image: url('./images/oats_banner.jpg');}
 }
 .why_us{
-    background-color: #CAE09F;
     margin-top: 100px;
 }
 .why-text{
@@ -74,9 +73,13 @@
     margin-top: -200px;
     /* background-color: black; */
 }
-.img-categories{
-    border-radius: 35px;
+.image-categories{
+    border-radius:7px;
     
+}
+.image-categories:hover{
+    box-shadow:3px 3px 3px 3px grey;
+    transform:translateY(-10px)
 }
 
 .cat-name{
@@ -88,4 +91,30 @@
 a{
     text-align: center;
 }
-
+footer{
+    background-color:#CAE09F;
+}
+.social-media>a{
+    font-weight: 900;
+    font-size: 20px;
+    text-decoration: none;
+    color:black;
+}
+.contact>a{
+    color:black;
+    text-decoration: none;
+}
+.additional>a{
+    font-weight: 900;
+    text-decoration: none;
+    color: black;
+    
+}
+.bottom{
+    height:50px;
+    background-color:#CAE09F;
+}
+.bottom>p{
+    position:relative;
+    top:10px;
+}
